--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -1683,6 +1683,9 @@ ul#topnavlist {
 	margin-bottom: -2px;
 	margin-top: -.3em;
 	height:1.8em;
+	white-space:nowrap;
+    overflow-y:scroll;
+    overflow-y:hidden;
  }
 
 ul#topnavlist li {
