--- a/themes/default21/styles.css
+++ b/themes/default21/styles.css
@@ -1586,7 +1586,8 @@ ul#topnavlist {
 	padding: 0;
 	margin-right: auto;
 	margin-left: auto;
-
+    overflow-y:scroll;
+    overflow-y:hidden;
  }
 
 ul#topnavlist li {
